# ya_recog3

./: Cargo.toml  audio.pcm  build.rs
src/: main.rs
stt/v3/: stt_service.proto
