[package]
name = "ya_recog3"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
prost = "0.13.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build = "0.12.0"
